# amplifier-bundle-agent-memory

./: .gitignore  ARCHITECTURE_REVIEW.md  README.md  bundle.md  pyproject.toml  setup-dev.sh
context/: memory-system-overview.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_MODELS.md  DESIGN_DECISIONS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_WITH_TESTING.md  V1.0_API.md  V1.0_DESIGN.md  V1.0_IMPLEMENTATION.md
modules/tool-memory-semantic/: README.md  pyproject.toml
modules/tool-memory-semantic/memory_semantic/: __init__.py  embeddings.py  models.py  storage.py  tools.py
reference/amplifier-bundle-memory/: CONTRIBUTING.md  LICENSE  README.md  bundle.md
reference/amplifier-bundle-memory/agents/: memory-curator.md
reference/amplifier-bundle-memory/behaviors/: memory.yaml
reference/amplifier-bundle-memory/context/: memory-instructions.md
tests/: __init__.py
tests/e2e/: test_user_workflow.py
tests/integration/: test_memory_workflow.py
tests/unit/: test_embeddings.py  test_models.py  test_storage.py  test_tools.py
