[project]
name = "amplifier-bundle-agent-memory"
version = "1.0.0"
description = "Semantic memory with agent identities for Amplifier"
authors = [{name = "Sam Schillace"}]
requires-python = ">=3.10"
dependencies = [
    "amplifier-core>=0.1.0",
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "performance: Performance benchmarks",
    "security: Security tests",
]

[tool.coverage.run]
source = ["memory_semantic"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.setuptools]
packages = ["memory_semantic"]
package-dir = {"" = "modules/tool-memory-semantic"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
