[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-module-tool-memory-semantic"
version = "1.0.0"
description = "Semantic memory tool for Amplifier using OpenAI embeddings and Qdrant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Microsoft", email = "amplifier@microsoft.com"}
]
keywords = ["amplifier", "memory", "semantic-search", "embeddings", "qdrant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "amplifier-core>=2.0.0",
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "pyright>=1.1.397",
]

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-bundle-agent-memory"
Documentation = "https://github.com/microsoft/amplifier-bundle-agent-memory#readme"
Repository = "https://github.com/microsoft/amplifier-bundle-agent-memory"
Issues = "https://github.com/microsoft/amplifier-bundle-agent-memory/issues"

[tool.setuptools]
packages = ["memory_semantic"]

[tool.pytest.ini_options]
testpaths = ["../../tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pyright]
include = ["memory_semantic"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
pythonVersion = "3.11"
